# bccw_fields2cover

./: CMakeLists.txt  README.rst
include/fields2cover/path_planning/: ompl_wrapper.h  path_planning.h  path_planning.h.13  path_planning.h.17  path_planning.h.3  path_planning.h.4  path_planning.h.7
src/fields2cover/path_planning/: path_planning.cpp  path_planning.cpp.1  path_planning.cpp.10  path_planning.cpp.11  path_planning.cpp.12  path_planning.cpp.13  path_planning.cpp.15  path_planning.cpp.16  path_planning.cpp.17  path_planning.cpp.2  path_planning.cpp.3  path_planning.cpp.4  path_planning.cpp.5  path_planning.cpp.6  path_planning.cpp.7  path_planning.cpp.8  path_planning.cpp.9
src/fields2cover/route_planning/: boustrophedon_order.cpp
tutorials/: 10_Clipper2_Intersects  10_Clipper2_Intersects.cpp  11_Clipper_Intersects.cpp  5_route_planning.cpp  8_complete_flow_1.cpp  8_complete_flow_2.cpp  9_CGAL_Intersects  9_CGAL_Intersects.cpp  CMakeLists.txt  README.md
